--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'Home') %>
 <h1>StaticPages#home</h1>
 <p>This is the Home page for the
     <a href="https://railstutorial.org/">Ruby on Rails</a>
