--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,13 @@
-<h1>StaticPages#home</h1>
-<p>This is the Home page for the
-    <a href="https://railstutorial.org/">Ruby on Rails</a>
-    Sample Application.
-</p>
+<div class="center hero-unit">
+  <h1>Welcome to the Sample App</h1>
+
+  <h2>
+    This is the home page for the
+    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails_logo.png", alt: "Rails"), 'http://rubyonrails.org/' %>
